--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<p class="name">this is the calculator by FadeFei</p>
+	<!-- <p class="name">this is the calculator by FadeFei</p> -->
 	<div class="calcu-edge">
+		<p class="name">CALCULATOR</p>
 		<div class="input-box">
 			<input class="formula-box" value="" id="formula-box"></input>
 		</div>
